# limnaion

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  serve.py  textual-web.toml
.claude/agents/: trpg-archivist.md  trpg-scribe.md
.claude/skills/trpg-new/: SKILL.md
.claude/skills/trpg-play/: SKILL.md
app/: config.py  context.py  dice.py  game_files.py  main.py  narrator.py  onboarding.py  openrouter_models.py  orchestrator.py  persona.py  providers.py  referee.py  scribe.py  settings.py  snapshots.py  types.py
app/data/: engine.md
app/data/templates/: character.md  log.md  rules.md  state.md  world.md
app/tui/: app.py  messages.py  projection.py  runner.py  transcript.py
app/tui/screens/: epilogue.py  load_game.py  onboarding.py  play.py  settings.py  splash.py
app/tui/widgets/: game_input.py  phase_line.py  status_panel.py  story_view.py
launcher/: gen_frog_ico.py  limnaion.bat  limnaion.sh.example  make_launcher.py
scripts/: narrate_fallback.sh  roll.sh  test_narrate_fallback.sh  test_roll.sh
tests/: __init__.py  conftest.py  test_config.py  test_context.py  test_dice.py  test_game_files.py  test_launcher.py  test_main.py  test_narrator.py  test_onboarding.py  test_openrouter_models.py  test_orchestrator.py  test_packaging.py  test_paths.py  test_persona.py  test_providers.py  test_referee.py  test_resilience.py  test_scribe.py  test_settings.py  test_snapshots.py  test_transcript.py  test_tui_epilogue.py  test_tui_load_game_screen.py  test_tui_onboarding_screen.py  test_tui_play_screen.py  test_tui_projection.py  test_tui_runner.py  test_tui_settings_screen.py  test_tui_splash_screen.py  test_tui_story_view.py  test_tui_widgets.py  test_tui_widgets2.py
